Fix most contrast issues

--- a/src/app.css
+++ b/src/app.css
@@ -89,11 +89,11 @@
 	}
 
 	a {
-		@apply text-brand-600 transition-colors duration-200;
+		@apply text-brand-700 transition-colors duration-200;
 	}
 
 	a:hover {
-		@apply text-brand-700;
+		@apply text-brand-800;
 	}
 
 	summary {
@@ -180,7 +180,7 @@
 	}
 
 	.input-label {
-		@apply text-xs font-semibold tracking-[0.2em] text-slate-400 uppercase;
+		@apply text-xs font-semibold tracking-[0.2em] text-slate-500 uppercase;
 	}
 
 	.input-control {
